--- a/assets/css/src/modules/produto.less
+++ b/assets/css/src/modules/produto.less
@@ -1,10 +1,15 @@
 .box-produto {
   
+  border: 1px solid;
+  width: 624px;
+  float: left;
+  padding: 5px 15px;
+
   .img-destaque {
     display: block;
     float: left;
     margin-right: 1%;
   }
 
-  
+
 }
