base css + teste font

--- a/assets/css/src/modules/produto.less
+++ b/assets/css/src/modules/produto.less
@@ -3,13 +3,32 @@
   border: 1px solid;
   width: 624px;
   float: left;
-  padding: 5px 15px;
+  padding: 20px;
+
+  header {
+    h1 {
+      margin-bottom: 20px;
+    }
+  }
 
   .img-destaque {
     display: block;
     float: left;
-    margin-right: 1%;
+    margin-right: 50px;
   }
 
+  .preco {
+    font-size: 22px;
+    color: #990000;
+    position: relative;
+    margin-bottom: 15px;
 
+    span {
+      display: inline-block;
+      font-size: 12px;
+      margin-left: 5px;
+      top: -3px;
+      position: absolute;
+    }
+  }
 }
