--- a/assets/css/src/modules/produto.less
+++ b/assets/css/src/modules/produto.less
@@ -11,6 +11,11 @@
     }
   }
 
+  aside {
+    width: 319px;
+    float: right;
+  }
+
   .img-destaque {
     display: block;
     float: left;
@@ -29,6 +34,23 @@
       margin-left: 5px;
       top: -3px;
       position: absolute;
+    }
+  }
+
+  .observacao {
+    display: block;
+    font-size: 12px;
+    color: #a8a8a8;
+    margin: 15px 0 10px 0;
+  }
+
+  form {
+    .ch-form-row {
+      padding: 0;
+
+      label {
+        width: 50px;
+      }
     }
   }
 }
