--- a/assets/css/src/modules/produto.less
+++ b/assets/css/src/modules/produto.less
@@ -37,11 +37,14 @@
     }
   }
 
-  .observacao {
-    display: block;
-    font-size: 12px;
-    color: #a8a8a8;
+  .comprar {
     margin: 15px 0 10px 0;
+    
+    .observacao {
+      display: block;
+      font-size: 12px;
+      color: #a8a8a8;
+    }
   }
 
   form {
