fix order input hidden

--- a/assets/css/src/modules/tabs.less
+++ b/assets/css/src/modules/tabs.less
@@ -29,6 +29,7 @@
    .ch-box-lite {
       position: relative;
       z-index: 5;
+      min-height: 150px;
       div {
         opacity: 0;
         padding: 1.5em;
